# nblm-rs

./: .gitignore  .pre-commit-config.yaml  404.html  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile.toml  README.md  codecov.yml  index.html  mkdocs.yml  pyproject.toml  renovate.json  sitemap.xml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  coverage.yml  mkdocs.yml  python-ci.yml  python-publish.yml  python-release.yml  (+4 more)
cli/: index.html
crates/nblm-cli/: Cargo.toml
crates/nblm-cli/src/: app.rs  args.rs  main.rs
crates/nblm-cli/src/ops/: audio.rs  auth.rs  doctor.rs  mod.rs  notebooks.rs  share.rs  sources.rs
crates/nblm-cli/src/util/: auth.rs  io.rs  mod.rs  oauth_bootstrap.rs  oauth_browser.rs  validate.rs
crates/nblm-cli/tests/: audio_delete.rs  doctor.rs  errors_retry.rs  json_output.rs  notebooks_create.rs  notebooks_delete.rs  notebooks_recent.rs  share_add.rs  sources_add.rs  sources_delete.rs  sources_get.rs  sources_upload.rs
crates/nblm-cli/tests/_helpers/: cmd.rs  mock.rs  mod.rs
crates/nblm-core/: Cargo.toml
crates/nblm-core/src/: auth.rs  client.rs  error.rs  lib.rs  models.rs  retry.rs
crates/nblm-core/src/auth/oauth/: config.rs  error.rs  loopback.rs  mod.rs  testing.rs
crates/nblm-core/src/client/: http.rs  mod.rs  url_builder.rs
crates/nblm-core/src/client/api/: audio.rs  mod.rs  notebooks.rs  sources.rs
crates/nblm-core/src/client/api/backends/: mod.rs
crates/nblm-core/src/client/api/backends/enterprise/: audio.rs  converter.rs  mod.rs  notebooks.rs  sources.rs
crates/nblm-core/src/client/api/backends/enterprise/models/requests/: share.rs
crates/nblm-core/src/client/url/: mod.rs
crates/nblm-core/src/doctor/: checks.rs  mod.rs
crates/nblm-core/src/env/: mod.rs
crates/nblm-core/src/models/: mod.rs  source.rs
crates/nblm-core/src/models/enterprise/: mod.rs  share.rs
crates/nblm-core/src/models/enterprise/requests/: source.rs
crates/nblm-core/src/models/enterprise/responses/: list.rs  mod.rs  source.rs
crates/nblm-core/src/models/requests/: audio.rs  mod.rs  notebook.rs  share.rs  source.rs
crates/nblm-core/src/models/responses/: audio.rs  list.rs  mod.rs  share.rs  source.rs
docs/: README.md  index.md
python/: README.md  index.html  manual_test.py  manual_test_env.py  pyproject.toml
scripts/: bump-version.sh  update_homebrew.sh
search/: search_index.json
(+64 files in other folders)
