[package]
name = "nblm-cli"
version = "0.2.1"
edition = "2021"
license = "MIT"
description = "Command-line interface for NotebookLM Enterprise API"
repository = "https://github.com/K-dash/nblm-rs"
homepage = "https://github.com/K-dash/nblm-rs"
readme = "../../README.md"
keywords = ["notebooklm", "cli", "google-cloud", "gemini"]
categories = ["command-line-utilities"]
authors = ["K-dash"]

[[bin]]
name = "nblm"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4.5.49", features = ["derive", "env"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
async-trait = "0.1.83"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = [
    "env-filter",
    "fmt",
    "json",
] }
nblm-core = { version = "0.2.1", path = "../nblm-core" }
humantime = "2.3.0"
url = "2.5.7"
mime_guess = "2.0.5"
colored = "3.0.0"
webbrowser = "1.0"
urlencoding = "2.1"
reqwest = { version = "0.12.24", default-features = false, features = [
    "json",
    "rustls-tls",
] }
time = { version = "0.3", features = ["serde", "parsing", "formatting"] }

[dev-dependencies]
assert_cmd = "2.0.17"
predicates = "3.1.3"
wiremock = "0.6.5"
serial_test = "3.2.0"
tempfile = "3.23.0"
insta = { version = "1.43.2", features = ["json"] }
rstest = "0.26.1"
