[package]
name = "nblm-core"
version = "0.1.1"
edition = "2021"
license = "MIT"
description = "Core library for NotebookLM Enterprise API client"
repository = "https://github.com/K-dash/nblm-rs"
homepage = "https://github.com/K-dash/nblm-rs"
readme = "../../README.md"
keywords = ["notebooklm", "api", "google-cloud", "gemini"]
categories = ["api-bindings"]
authors = ["K-dash"]

[lib]
doctest = false

[dependencies]
anyhow = "1.0.100"
async-trait = "0.1.89"
reqwest = { version = "0.12.24", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread", "process", "time"] }
url = "2.5.7"
backon = "1.6.0"
tracing = "0.1.41"
httpdate = "1.0.3"
bytes = "1.7.1"

[features]
default = []
